--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>GFG</title>
 </head>
 <body>
-    <p style="font-size: 14px;">June 2025 | PP-PF-OPHT-ALL-0224-1</p>
+    <div class="ss_classic_survey_intro_contents">
+    <div class="ss-survey-text-question-text">
+        <p>June 2025 | PP-PF-OPHT-ALL-0224-1 <br> June 2025 | PP-PF-OPHT-ALL-0224-1 <a href="https://abisq.github.io/HCP_Barometer/">HCP Barometer</a></p>
+    </div>
+</div>
 </body>
 </html>
