--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GFG</title>
+    <style>
+        p {
+            width: fit-content; /* Or define a specific width, e.g., 500px */
+            margin: 0 auto; /* Centers the block horizontally */
+        }
+    </style>
 </head>
 <body>
-    <div class="ss_classic_survey_intro_contents">
-    <div class="ss-survey-text-question-text">
-        <p>June 2025 | PP-PF-OPHT-ALL-0224-1 <br> June 2025 | PP-PF-OPHT-ALL-0224-1 <a href="https://abisq.github.io/HCP_Barometer/">HCP Barometer</a></p>
-    </div>
-</div>
+
+    <p style="font-size: 20px;">June 2025 | PP-PF-OPHT-ALL-0224-1</p>
+
 </body>
 </html>
