--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 
-    <p style="font-size: 20px;">June 2025 | PP-PF-OPHT-ALL-0224-1</p>
+    <p> <a href="https://eu.sprw.ai/stt-o6R28">style="font-size: 20px;"HCP Barometer</a></p>
+    <p style="font-size: 14px;">June 2025 | PP-PF-OPHT-ALL-0224-1</p>
+ 
 
 </body>
 </html>
