--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
             width: fit-content; /* Or define a specific width, e.g., 500px */
             margin: 0 auto; /* Centers the block horizontally */
         }
+        /* Added a style for the anchor tag within a paragraph to set its font size */
+        p a {
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
 
-    <p> <a href="https://eu.sprw.ai/stt-o6R28">style="font-size: 20px;"HCP Barometer</a></p>
+    <p> <a href="https://eu.sprw.ai/stt-o6R28">HCP Barometer</a></p>
     <p style="font-size: 14px;">June 2025 | PP-PF-OPHT-ALL-0224-1</p>
- 
+
 
 </body>
 </html>
