--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
 
     <p> <a href="https://eu.sprw.ai/stt-o6R28">HCP Barometer</a></p>
+    <p style="font-size: 14px;">    </p>
     <p style="font-size: 14px;">June 2025 | PP-PF-OPHT-ALL-0224-1</p>
 
 
