--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <p style="font-size: 14px;">Mexico | MA-M_AFL-MX-0286-1 | Julio 2025</p>
     <p style="font-size: 14px;">Portugal | PP-PFM-OPHT-PT-0001 08/2025</p>
     <p style="font-size: 14px;">Switzerland | MA-PFM-OPHT-CH-0022-1 | 07.2025</p>
+    <p style="font-size: 14px;">Lithuania | 2025 m. spalis | MR-LT-0013-1</p>
+    <p style="font-size: 14px;">Greece | November 2025 | MA-PFM-OPHT-GR-0043-1</p>
 
 </body>
 </html>
