added lithuania and greece

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <p> <a href="https://eu.sprw.ai/stt-o6R28">HCP Barometer</a></p>
     <p style="font-size: 14px;">    </p>
-    <p style="font-size: 14px;">Global Code: July 2025 | PP-PF-OPHT-ALL-0224-1</p>
+    <p style="font-size: 14px;">Global | PP-PF-OPHT-ALL-0224-1 | July 2025 </p>
     <p style="font-size: 14px;">Austria | PP-EYL_8mg-AT-0113-1-2025-07</p>
     <p style="font-size: 14px;">Brazil | PP-M_AFL-BR-0018 | Agosto 2025</p>
     <p style="font-size: 14px;">Canada | July 2025 | PP-PF-OPHT-CA-0007</p>
@@ -31,6 +31,8 @@
     <p style="font-size: 14px;">Mexico | MA-M_AFL-MX-0286-1 | Julio 2025</p>
     <p style="font-size: 14px;">Portugal | PP-PFM-OPHT-PT-0001 08/2025</p>
     <p style="font-size: 14px;">Switzerland | MA-PFM-OPHT-CH-0022-1 | 07.2025</p>
+    <p style="font-size: 14px;">Lithuania | MR-LT-0013-1 | 2025 m. spalis</p>
+    <p style="font-size: 14px;">Greece | MA-PFM-OPHT-GR-0043-1 | November 2025</p>
 
 </body>
 </html>
