--- a/index.html
+++ b/index.html
@@ -20,19 +20,16 @@
 
     <p> <a href="https://eu.sprw.ai/stt-o6R28">HCP Barometer</a></p>
     <p style="font-size: 14px;">    </p>
-    <p style="font-size: 14px;">Global | PP-PF-OPHT-ALL-0224-1 | July 2025 </p>
-    <p style="font-size: 14px;">Austria | PP-EYL_8mg-AT-0113-1-2025-07</p>
-    <p style="font-size: 14px;">Brazil | PP-M_AFL-BR-0018 | Agosto 2025</p>
-    <p style="font-size: 14px;">Canada | July 2025 | PP-PF-OPHT-CA-0007</p>
-    <p style="font-size: 14px;">Colombia | Agosto 2025 | PP-EYL-CO-0913-1</p>
-    <p style="font-size: 14px;">France | Septembre 2025 | PP-PF-OPHT-FR-1278-1</p>
-    <p style="font-size: 14px;">Hong Kong | September 2025 | PP-PFM-OPHT-HK-0004-1</p>
-    <p style="font-size: 14px;">Israel | MA-PFM-OPHT-IL-0004-1 | 2025 אוגוסט</p>
-    <p style="font-size: 14px;">Mexico | MA-M_AFL-MX-0286-1 | Julio 2025</p>
-    <p style="font-size: 14px;">Portugal | PP-PFM-OPHT-PT-0001 08/2025</p>
-    <p style="font-size: 14px;">Switzerland | MA-PFM-OPHT-CH-0022-1 | 07.2025</p>
-    <p style="font-size: 14px;">Lithuania | 2025 m. spalis | MR-LT-0013-1</p>
-    <p style="font-size: 14px;">Greece | November 2025 | MA-PFM-OPHT-GR-0043-1</p>
+    <p style="font-size: 14px;">Global | PP-PF-OPHT-ALL-0224-2 | November 2025 </p>
+    <p style="font-size: 14px;">Austria | PP-EYL_8mg-AT-0113-2-2025-11 </p>
+    <p style="font-size: 14px;">Brazil | MA-PFM-OPHT-BR-0068-2 | Novembro 2025 </p>
+    <p style="font-size: 14px;">France | Novembre 2025 | PP-PF-OPHT-FR-1278-2 </p>
+    <p style="font-size: 14px;">Greece | November 2025 | MA-PFM-OPHT-GR-0043-2 </p>
+    <p style="font-size: 14px;">Hong Kong | November 2025 | PP-PFM-OPHT-HK-0005-1 </p>
+    <p style="font-size: 14px;">Israel | MA-PF-OPHT-IL-0002-1 | 2025 נוֹבֶמבֶּר </p>
+    <p style="font-size: 14px;">Lithuania | MR-LT-0017-1 | 2025 m. lapkritis </p>
+    <p style="font-size: 14px;">Portugal | PP-PFM-OPHT-PT-0001-1 Agosto/2025 </p>
+    <p style="font-size: 14px;">Singapore | MA-PFM-OPHT-SG-0065-1 (11/2025) </p>
 
 </body>
 </html>
