--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <p style="font-size: 14px;">Hong Kong | November 2025 | PP-PFM-OPHT-HK-0005-1 </p>
     <p style="font-size: 14px;">Israel | MA-PF-OPHT-IL-0002-1 | 2025 נוֹבֶמבֶּר </p>
     <p style="font-size: 14px;">Lithuania | MR-LT-0017-1 | 2025 m. lapkritis </p>
+     <p style="font-size: 14px;">Mexico | PP-AFL_8mg-MX-0060-1 | Diciembre 2025 </p>
     <p style="font-size: 14px;">Portugal | PP-PFM-OPHT-PT-0001-1 Agosto/2025 </p>
     <p style="font-size: 14px;">Saudi Arabia | MA-PFM-OPHT-SA-0018-1 | December 2025 </p>
     <p style="font-size: 14px;">Singapore | MA-PFM-OPHT-SG-0065-1 (11/2025) </p>
