--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p style="font-size: 14px;">Global | PP-PF-OPHT-ALL-0224-2 | November 2025 </p>
     <p style="font-size: 14px;">Austria | PP-EYL_8mg-AT-0113-2-2025-11 </p>
     <p style="font-size: 14px;">Brazil | MA-PFM-OPHT-BR-0068-2 | Novembro 2025 </p>
+    <p style="font-size: 14px;">Canada | PP-PF-OPHT-CA-0021-1 | December 2025 </p>
     <p style="font-size: 14px;">Colombia | PP-EYL-CO-0962-1 | Noviembre 2025 </p>
     <p style="font-size: 14px;">France | Novembre 2025 | PP-PF-OPHT-FR-1278-2 </p>
     <p style="font-size: 14px;">Greece | November 2025 | MA-PFM-OPHT-GR-0043-2 </p>
